@@ -1,3 +1,6 @@
+2018-08-31  Kirit Saelensminde  <kirit@felspar.com>
+ Add a way to get a JSON pointer URL fragment string for a `jcursor`.
+
 2018-08-16  Kirit Saelensminde  <kirit@felspar.com>
  Add a parser for JSON pointers.
 
